# Sonory

./: .env.example  .gitignore  DEVELOPMENT_LOG.md  IMPLEMENTATION_CHALLENGES.md  MIGRATION_COMPLETE.md  NEXT_SESSION_PROMPT.md  NPM_SCRIPTS_GUIDE.md  README.md  biome.json  biome.jsonc  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  turbo.json
.cursor/rules/: 01-sonory-app-requirements.mdc  02-sonory-strict-rules.mdc  03-sonory-backend-requirements.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-fix.md  02-feature.md  03-docs.md  04-style.md  05-refactor.md  06-test.md  07-chore.md  08-ci.md  issue_form.yaml
.github/workflows/: add-issue-to-project-todo.yml  add-issue-to-project-with-status.yml  add-issue-to-project.yml  assign-author.yml  issue-progress-automation.yml  label-sync-automation.yml  lint.yml  pr-progress-automation.yml  vercel-preview-lighthouse.yml
apps/api/: .gitignore  README.md  biome.jsonc  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
apps/python-audio-analyzer/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml
apps/python-audio-analyzer/src/: main.py
apps/python-audio-analyzer/src/api/: routes.py
apps/python-audio-analyzer/src/models/: yamnet_wrapper.py
apps/python-audio-analyzer/src/services/: analyzer.py  audio_processor.py
apps/web/: biome.jsonc  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
public/: manifest.json  offline.html
src/: theme.js
src/app/: globals.css  (+3 more)
types/: gtag.d.ts
(+233 files in other folders)
